# Fiscalito-MVP

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
apps/api/app/: config.py  constants.py  exceptions.py  logging_config.py  main.py
apps/api/docs/: branching.md  pautas_de_calidad.md
apps/api/knowledge_base/: 00_fuentes_consulta.md  01_valores_referencia.md  02_isr_tablas_tarifas.md  03_resico_626.md  04_actividad_empresarial_612.md  05_asalariados_605.md  06_arrendamiento_606.md  07_plataformas_625.md  08_iva.md  09_diot.md  10_retenciones.md  11_deducciones_personales.md  12_calendario_fiscal_2026.md  13_rmf_2026_cambios.md  14_cfdi_clasificacion.md  README.md
apps/api/pfebrero/: ARR_FEB_C3D4E-3333-4CCC-DDDD-333333333333_NIGE780321TK2_2026-02-16_.xml  COM_FEB01_A1B2C-1111-4AAA-BBBB-111111111111_CADG620317EE0_2026-02-05_.xml  COM_FEB02_B2C3D-2222-4BBB-CCCC-222222222222_CADG620317EE0_2026-02-15_.xml  CONT_FEB_D4E5F-4444-4DDD-EEEE-444444444444_MCP2404207Q2_2026-02-09_.xml  CPV_CONT_FEB_E5F6A-5555-4EEE-FFFF-555555555555_MCP2404207Q2_2026-02-20_.xml  CPV_SOL_FEB_E1F2A-BBBB-4EEE-FFFF-BBBBBBBBBBBB_BMS170308GT7_2026-02-01_.xml  EST_FEB_F2A3B-CCCC-4FFF-AAAA-CCCCCCCCCCCC_OEB1003295C9_2026-02-18_.xml  GAS_FEB_F6A7B-6666-4FFF-AAAA-666666666666_SER051125GR4_2026-02-10_.xml  INT_FEB_C9D0E-9999-4CCC-DDDD-999999999999_TME840315KT6_2026-02-01_.xml  OD_FEB_A7B8C-7777-4AAA-BBBB-777777777777_ODM950324V2A_2026-02-12_.xml  (+2 more)
apps/api/tests/: conftest.py  test_calculadora.py  (+2 more)
(+121 files in other folders)
